Bug 337561: Merge nsJARDirectoryInputStream into nsJARInputStream, patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r+sr=darin