modules/libjar/nsJAR.h
@@ -86,6 +86,8 @@ typedef enum
   JAR_NOT_SIGNED          = 7
 } JARManifestStatusType;
 
+PRTime GetModTime(PRUint16 aDate, PRUint16 aTime);
+
 /*-------------------------------------------------------------------------
  * Class nsJAR declaration. 
  * nsJAR serves as an XPCOM wrapper for nsZipArchive with the addition of 
@@ -182,8 +184,8 @@ private:
     PRUint32     mSize;             /* size in original file */
     PRUint32     mRealsize;         /* inflated size */
     PRUint32     mCrc32;
-    PRUint16     mTime;
     PRUint16     mDate;
+    PRUint16     mTime;
     PRUint8      mCompression;
     PRPackedBool mIsDirectory; 
     PRPackedBool mIsSynthetic;
