modules/libjar/nsJARInputStream.cpp
@@ -42,6 +42,9 @@
 #include "zipstruct.h"         // defines ZIP compression codes
 #include "nsZipArchive.h"
 
+#include "nsNetUtil.h"
+#include "nsEscape.h"
+#include "nsIFile.h"
 
 /*---------------------------------------------
  *  nsISupports implementation
@@ -54,11 +57,11 @@ NS_IMPL_THREADSAFE_ISUPPORTS1(nsJARInputStream, nsIInputStream)
  *--------------------------------------------------------*/
 
 nsresult
-nsJARInputStream::Init(nsJAR* aJAR, nsZipItem *item, PRFileDesc *fd)
+nsJARInputStream::InitFile(nsZipArchive* aZip, nsZipItem *item, PRFileDesc *fd)
 {
     nsresult rv;
 
-    NS_ENSURE_ARG_POINTER(aJAR);
+    NS_ENSURE_ARG_POINTER(aZip);
     NS_ENSURE_ARG_POINTER(item);
     NS_ENSURE_ARG_POINTER(fd);
 
@@ -93,11 +96,96 @@ nsJARInputStream::Init(nsJAR* aJAR, nsZipItem *item, PRFileDesc *fd)
     }
    
     //-- Set filepointer to start of item
-    rv = aJAR->mZip.SeekToItem(item, mFd);
+    rv = aZip->SeekToItem(item, mFd);
     NS_ENSURE_SUCCESS(rv, NS_ERROR_FILE_CORRUPTED);
         
     // Open for reading
     mClosed = PR_FALSE;
+    mCurPos = 0;
+    return NS_OK;
+}
+
+nsresult
+nsJARInputStream::InitDirectory(nsZipArchive* aZip,
+                                const nsACString& aJarDirSpec,
+                                const char* aDir)
+{
+    NS_ENSURE_ARG_POINTER(aZip);
+    NS_ENSURE_ARG_POINTER(aDir);
+
+    // Mark it as closed, in case something fails in initialisation
+    mClosed = PR_TRUE;
+    mDirectory = PR_TRUE;
+    
+    // Keep the zipReader for getting the actual zipItems
+    mZip = aZip;
+    nsZipFind *find;
+    nsresult rv;
+    if (*aDir) {
+        // We can get aDir's contents as strings via FindEntries
+        // with the following pattern (see nsIZipReader.findEntries docs)
+        // assuming dirName is properly escaped:
+        //
+        //   dirName + "?*~" + dirName + "?*/?*"
+        nsDependentCString dirName(aDir);
+        mNameLen = dirName.Length();
+    
+        // iterate through dirName and copy it to escDirName, escaping chars
+        // which are special at the "top" level of the regexp so FindEntries
+        // works correctly
+        nsCAutoString escDirName;
+        const char* curr = dirName.BeginReading();
+        const char* end  = dirName.EndReading();
+        while (curr != end) {
+            switch (*curr) {
+                case '*':
+                case '?':
+                case '$':
+                case '[':
+                case ']':
+                case '^':
+                case '~':
+                case '(':
+                case ')':
+                case '\\':
+                    escDirName.Append('\\');
+                    // fall through
+                default:
+                    escDirName.Append(*curr);
+            }
+            ++curr;
+        }
+        nsCAutoString pattern = escDirName + NS_LITERAL_CSTRING("?*~") +
+                                escDirName + NS_LITERAL_CSTRING("?*/?*");
+        rv = aZip->FindInit(pattern.get(), &find);
+    } else {
+        mNameLen = 0;
+        rv = aZip->FindInit(nsnull, &find);
+    }
+    if (NS_FAILED(rv)) return rv;
+
+    const char *name;
+    while ((rv = find->FindNext( &name )) == NS_OK) {
+        // No need to copy string, just share the one from nsZipArchive
+        mArray.AppendCString(nsDependentCString(name));
+    }
+    delete find;
+
+    if (rv != NS_ERROR_FILE_TARGET_DOES_NOT_EXIST && NS_FAILED(rv)) {
+        return NS_ERROR_FAILURE;    // no error translation
+    }
+
+    // Sort it
+    mArray.Sort();
+
+    mBuffer.AssignLiteral("300: ");
+    mBuffer.Append(aJarDirSpec);
+    mBuffer.AppendLiteral("\n200: filename content-length last-modified file-type\n");
+
+    // Open for reading
+    mClosed = PR_FALSE;
+    mCurPos = 0;
+    mArrPos = 0;
     return NS_OK;
 }
 
@@ -107,7 +195,9 @@ nsJARInputStream::Available(PRUint32 *_retval)
     if (mClosed)
         return NS_BASE_STREAM_CLOSED;
 
-    if (mInflate) 
+    if (mDirectory)
+        *_retval = mBuffer.Length();
+    else if (mInflate) 
         *_retval = mInflate->mOutSize - mInflate->mZs.total_out;
     else 
         *_retval = mInSize - mCurPos;
@@ -126,28 +216,31 @@ nsJARInputStream::Read(char* aBuffer, PRUint32 aCount, PRUint32 *aBytesRead)
     if (mClosed)
         return rv;
 
-    if (mInflate) {
-        rv = ContinueInflate(aBuffer, aCount, aBytesRead);
+    if (mDirectory) {
+        rv = ReadDirectory(aBuffer, aCount, aBytesRead);
     } else {
-        PRInt32 bytesRead = 0;
-        if (aCount > mInSize - mCurPos)
-            aCount = mInSize - mCurPos;
-        if (aCount) {        
-            bytesRead = PR_Read(mFd, aBuffer, aCount);
-            if (bytesRead < 0)
-                return NS_ERROR_FILE_CORRUPTED;
-            mCurPos += bytesRead;
+        if (mInflate) {
+            rv = ContinueInflate(aBuffer, aCount, aBytesRead);
+        } else {
+            PRInt32 bytesRead = 0;
+            aCount = PR_MIN(aCount, mInSize - mCurPos);
+            if (aCount) {        
+                bytesRead = PR_Read(mFd, aBuffer, aCount);
+                if (bytesRead < 0)
+                    return NS_ERROR_FILE_CORRUPTED;
+                mCurPos += bytesRead;
+            }
+            *aBytesRead = bytesRead;
         }
-        *aBytesRead = bytesRead;
-    }
-    
-    // be aggressive about closing!
-    // note that sometimes, we will close mFd before we've finished
-    // deflating - this is because zlib buffers the input
-    // So, don't free the ReadBuf/InflateStruct yet.
-    if (mCurPos >= mInSize && mFd) {
-        PR_Close(mFd);
-        mFd = nsnull;
+        
+        // be aggressive about closing!
+        // note that sometimes, we will close mFd before we've finished
+        // deflating - this is because zlib buffers the input
+        // So, don't free the ReadBuf/InflateStruct yet.
+        if (mCurPos >= mInSize && mFd) {
+            PR_Close(mFd);
+            mFd = nsnull;
+        }
     }
     return rv;
 }
@@ -201,7 +294,7 @@ nsJARInputStream::ContinueInflate(char* aBuffer, PRUint32 aCount,
 
         if (mInflate->mZs.avail_in == 0 && mCurPos < mInSize) {
             // time to fill the buffer!
-            PRUint32 bytesToRead = (mInSize-mCurPos < ZIP_BUFLEN) ? mInSize-mCurPos : ZIP_BUFLEN;
+            PRUint32 bytesToRead = PR_MIN(mInSize - mCurPos, ZIP_BUFLEN);
 
             NS_ASSERTION(mFd, "File handle missing");
             PRInt32 bytesRead = PR_Read(mFd, mInflate->mReadBuf, bytesToRead);
@@ -243,4 +336,85 @@ nsJARInputStream::ContinueInflate(char* aBuffer, PRUint32 aCount,
     }
 
     return NS_OK;
+}
+
+nsresult
+nsJARInputStream::ReadDirectory(char* aBuffer, PRUint32 aCount, PRUint32 *aBytesRead)
+{
+    // No need to check the args, ::Read did that, but assert them at least
+    NS_ASSERTION(aBuffer,"aBuffer parameter must not be null");
+    NS_ASSERTION(aBytesRead,"aBytesRead parameter must not be null");
+
+    // If the buffer contains data, copy what's there up to the desired amount
+    PRUint32 numRead = CopyDataToBuffer(aBuffer, aCount);
+
+    if (aCount > 0) {
+        // empty the buffer and start writing directory entry lines to it
+        mBuffer.Truncate();
+        mCurPos = 0;
+        const PRUint32 arrayLen = mArray.Count();
+
+        for ( ;aCount > mBuffer.Length(); mArrPos++) {
+            // have we consumed all the directory contents?
+            if (arrayLen <= mArrPos)
+                break;
+
+            const char * entryName = mArray[mArrPos]->get();
+            PRUint32 entryNameLen = mArray[mArrPos]->Length();
+            nsZipItem* ze = mZip->GetItem(entryName);
+            NS_ENSURE_TRUE(ze, NS_ERROR_FILE_TARGET_DOES_NOT_EXIST);
+
+            // Last Modified Time
+            PRExplodedTime tm;
+            PR_ExplodeTime(GetModTime(ze->date, ze->time), PR_GMTParameters, &tm);
+            char itemLastModTime[65];
+            PR_FormatTimeUSEnglish(itemLastModTime,
+                                   sizeof(itemLastModTime),
+                                   " %a,%%20%d%%20%b%%20%Y%%20%H:%M:%S%%20GMT ",
+                                   &tm);
+
+            // write a 201: line to the buffer for this item
+            // 200: filename content-length last-modified file-type
+            mBuffer.AppendLiteral("201: ");
+
+            // Names must be escaped and relative, so use the pre-calculated length
+            // of the directory name as the offset into the string
+            // NS_EscapeURL adds the escaped URL to the give string buffer
+            NS_EscapeURL(entryName + mNameLen,
+                         entryNameLen - mNameLen, 
+                         esc_Minimal | esc_AlwaysCopy,
+                         mBuffer);
+
+            mBuffer.Append(' ');
+            mBuffer.AppendInt(ze->realsize, 10);
+            mBuffer.Append(itemLastModTime); // starts/ends with ' '
+            if (ze->isDirectory) 
+                mBuffer.AppendLiteral("DIRECTORY\n");
+            else
+                mBuffer.AppendLiteral("FILE\n");
+        }
+
+        // Copy up to the desired amount of data to buffer
+        numRead += CopyDataToBuffer(aBuffer, aCount);
+    }
+
+    *aBytesRead = numRead;
+    return NS_OK;
+}
+
+PRUint32
+nsJARInputStream::CopyDataToBuffer(char* &aBuffer, PRUint32 &aCount)
+{
+    const PRUint32 writeLength = PR_MIN(aCount, mBuffer.Length() - mCurPos);
+
+    if (writeLength > 0) {
+        memcpy(aBuffer, mBuffer.get() + mCurPos, writeLength);
+        mCurPos += writeLength;
+        aCount  -= writeLength;
+        aBuffer += writeLength;
+    }
+
+    // return number of bytes copied to the buffer so the
+    // Read method can return the number of bytes copied
+    return writeLength;
 }
