modules/libjar/objs.mk
@@ -43,7 +43,6 @@ MODULES_STANDALONE_LCPPSRCS = \
 MODULES_LIBJAR_LCPPSRCS = \
 		$(MODULES_STANDALONE_LCPPSRCS) \
 		nsJARInputStream.cpp \
-		nsJARDirectoryInputStream.cpp \
 		nsJAR.cpp \
 		nsJARFactory.cpp \
 		nsXPTZipLoader.cpp \
